<resources>
    <string name="app_name">Collaborative Education</string>

    <!-- Layouts -->
    <string name="title_add_category">Category name</string>
    <string name="hint_add_category">Enter category in form of [gain] [knowledge] in [subject]</string>

    <string name="title_add_course">Course name</string>
    <string name="hint_add_course">Enter course name</string>

    <string name="title_datasource_name">Source name</string>
    <string name="hint_datasource_name">Enter source name</string>

    <string name="title_data_source">Data source</string>
    <string name="hint_data_source">Enter URL or reference description</string>

    <string name="action_add_new_category">Add new category</string>
    <string name="action_add_new_course">Add new course</string>
    <string name="action_add_new_source">Add new source</string>

    <string name="label_author_origin">Author</string>
    <string name="label_author_alternative">Alternative</string>

    <string name="hint_search">Type to search</string>
    <string name="text_vk_login">Vkontakte login</string>
    <string name="text_anon_login">Continue without auth</string>
    <string name="text_save">Save</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>

    <string name="dialog_title_give_before_take">Give before take</string>
    <string name="dialog_content_give_before_take">Community lives by creating and curating courses.\nWe encourage new and current members to share their knowledge by creating new or contributing
        to existing course.\nIf you can do some valuable work, solve valuable tasks, please share
        courses which allows them to obtain skills to do this work, to solve this tasks.
    </string>
    <string name="dialog_title_work_is_suspended">Work is suspended</string>
    <string name="dialog_content_work_is_suspended">Work on the project is suspended and server is shutdown.
        \n\nAfter gathering first feedback product roadmap had been reviewed and shift to integration with
        existing communities built around Q&amp;A on different topics such as Яндекс.Кью and stackexchange.
        First stage of negotiation didn\'t bring necessary results, next ideas were put in backlog and
        focus moved to another product.
        \n\nIf you want to be informed after release of the next version, please send an email on dmitrii.kazakov@gmail.com
        with topic Collaborative Education.
        \n\nThank you for your interest!
    </string>

    <!-- App consts -->
    <string name="click_comments_placeholder">Comments click. Upcoming feature</string>
    <string name="click_add_source_bad_url">This is not valid url. Did you input it in format https://host_name:port/URI?</string>
    <string name="click_open_source_no_activity">There is no activity to handle/show this url</string>
    <string name="error_server_side">Something went wrong on backend. Please try later</string>
    <string name="error_vk_login">Failed to login into VK</string>

</resources>
